force-app/main/default/objects/movedata__MoveData_Pipeline__mdt/movedata__MoveData_Pipeline__mdt.object-meta.xml
<CustomObject>
    <label>MoveData Pipeline Setting</label>
    <pluralLabel>MoveData Pipeline Settings</pluralLabel>
</CustomObject>