force-app/main/default/objects/movedata__MoveData_Pipeline__mdt/fields/movedata__Disabled__c.field-meta.xml
<CustomField>
    <fullName>movedata__Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>