force-app/main/default/objects/movedata__MoveData_Pipeline__mdt/fields/movedata__Order__c.field-meta.xml
<CustomField>
    <fullName>movedata__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>