force-app/main/default/objects/movedata__MoveData_Pipeline__mdt/fields/movedata__Type__c.field-meta.xml
<CustomField>
    <fullName>movedata__Type__c</fullName>
    <label>Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>