force-app/main/default/objects/movedata__MoveData_Pipeline__mdt/listViews/movedata__All.listView-meta.xml
<ListView>
    <fullName>movedata__All</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>movedata__Type__c</columns>
    <columns>movedata__Order__c</columns>
    <columns>movedata__Handler__c</columns>
    <columns>movedata__Disabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Metadata</label>
</ListView>